# kvslite

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md  DESIGN.md  IMPLEMENTATION.md
examples/: basic.rs
src/: codec.rs  db.rs  error.rs  lib.rs  wal.rs
tests/: integration_tests.rs
